# build123dexamples

./: .gitignore  24-02-04.step  24-02-04.stl  README.md  better.py  boo.py  claude.py  create_prompts.py  halfsphere.py  handle.py  helloworld.py  learnbuild123d.ipynb  melbpc.py  page59.py  pyproject.toml  tower.py
cadexamples/: 01.py  cad_utils.py  cad_visual_example.py  math_functions.py
contributions/: 1.py  enclosure_hubscom.py  enclosure_hubscom_v2.py  fixed_v1.py  fixed_v2.py  helpers.py
discord-examples/: 01-select-edges.py  holder_builder.py  scoop.py
fundamental_questions/: 01-mixing-builder-algebra.py  README.md
llm_build123d_to_fusion360/: example1-prompt_part1.txt  example1.py  example2-fusion360.py  example2-prompt.txt  example2-prompt_part1.txt  example2.py  from_build123d_to_fusion360.txt  prompt2.txt
llm_build123dtofusion360examples/: create_prompt.py  prompt.txt  prompt_part1.txt  prompt_part2.txt  prompt_part3.txt  prompt_part4.txt  prompt_preamble.txt
melbpc/: from_build123d_to_fusion360.txt  hexnut-fusion360.py  johnshirt_sacriificialtable.py  platewithhole-fusion360.py  sacrificial-table-fusion360.py  sacrificial-table.py  sacrificial-table.step  sacrificial-table.stl  sacrificial_grok.py  sacrificial_table.step  sacrificial_table.stl
printables/: AnyConv.com__Google TV Chromecast Remote Wall Mount Caddy.step  Chromecast with google tv remote holder-prusa.stl  Chromecast with google tv remote holder.3mf  Chromecast with google tv remote holder.stl  Google TV Chromecast Remote Wall Mount Caddy.stl  buildpoly.py  chromecast1.py  (+7 more)
(+32 files in other folders)
