[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "build123examples"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
   "build123d",
   "ipykernel",
   "jupyter-console",
   "ocp-tessellate",
   "ocp-vscode"
]

[tool.setuptools]
py-modules = []
